# web-content-summarizer

./: .env.example  README.md  main.py  pyproject.toml  test_urls.txt
docs/: project-description.md
web_content_summarizer/: __init__.py  cli.py  config.py  extract.py  fetch.py  models.py  pipeline.py  summarize.py
